# nmdlib

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
assets/shaders/: basic.vert.glsl  test.fs  test.vs
include/: camera.hpp  engine.hpp  mesh.hpp  node.hpp  shader.hpp  singleton.hpp
include/glad/: gl.h
include/nmdlib/: material.h  mesh.h  shader.h  singleton.h
include/shaders/: test.fs  test.vs
src/: main.cpp
src/nmdlib/: material.cpp  mesh.cpp  shader.cpp  singleton.cpp
